@startuml
'https://plantuml.com/class-diagram

package model {
    class Admin {
        - userName: String
    }

    class Book {
        - title: String
        - author: String
        - publicationYear: int
        - isbn: String
        - availableCopies: int
    }

    class Member {
        - name: String
        - age: int
        - membershipId: String
        - contactInfo: String
    }

    class Loan {
        - loanId: String
        - isbn: String
        - membershipId: String
        - loanDate: LocalDate
        - dueDate: LocalDate
        - status: LoanStatus
    }

    enum LoanStatus {
        ACTIVE
        RETURNED
    }
}

package repository {
    interface AdminRepository {
        + save(Admin)
        + findByUserName(String): Admin
        + delete(Admin)
    }

    interface BookRepository {
        + save(Book)
        + delete(Book)
        + findByISBN(String): Optional<Book>
        + findByTitle(String): List<Book>
        + findByAuthor(String): List<Book>
        + findByYear(int): List<Book>
        + findAll(): List<Book>
    }

    interface MemberRepository {
        + save(Member)
        + deleteById(String)
        + existsById(String): boolean
        + findById(String): Optional<Member>
        + findAll(): List<Member>
        + deleteAll()
        + count(): int
    }

    interface LoanRepository {
        + save(Loan)
        + findById(String): Optional<Loan>
        + findActiveByMemberAndIsbn(String, String): Optional<Loan>
        + findActiveByMember(String): List<Loan>
        + findAllActive(): List<Loan>
    }

    class InMemoryAdminRepository implements AdminRepository
    class InMemoryBookRepository implements BookRepository
    class InMemoryMemberRepository implements MemberRepository
    class InMemoryLoanRepository implements LoanRepository
}

package service {
    class AdminService {
        - adminRepo: AdminRepository
    }

    class BookService {
        - bookRepo: BookRepository
    }

    class MemberService {
        - memberRepo: MemberRepository
    }

    class LoanService {
        - loanRepo: LoanRepository
        - bookRepo: BookRepository
        - memberRepo: MemberRepository
    }
}

class LibraryApp {
    + main(args: String[]): void
}

' Relationships
LibraryApp --> AdminService
LibraryApp --> BookService
LibraryApp --> MemberService
LibraryApp --> LoanService

Loan --> Book
Loan --> Member

AdminService --> AdminRepository
BookService --> BookRepository
MemberService --> MemberRepository
LoanService --> LoanRepository
LoanService --> BookRepository
LoanService --> MemberRepository

InMemoryAdminRepository ..|> AdminRepository
InMemoryBookRepository ..|> BookRepository
InMemoryMemberRepository ..|> MemberRepository
InMemoryLoanRepository ..|> LoanRepository


@enduml